Successfully Altered Implementation For User Management